--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -21,6 +21,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
     .content-wrapper{
       background-color: white;
     }
+    #tablaUsuarios_filter{
+      text-align: right;
+    }
   </style>
 </head>
 <body class="hold-transition sidebar-mini">
